--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   firebase_ui_auth: ^1.8.0
   get: ^4.6.6
   intl: ^0.18.1
+  google_sign_in: ^6.1.5
+  firebase_ui_oauth_google: ^1.2.12
 
 dev_dependencies:
   flutter_test:
