--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_bottom_navigation_bar: ^1.2.1
   circular_profile_avatar: ^2.0.5
-  fl_chart: ^0.63.0
+  fl_chart: ^0.64.0
   simple_animation_progress_bar: ^1.6.0
   animated_toggle_switch: ^0.8.0
   flip_card: ^0.7.0
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.18.1
   google_sign_in: ^6.1.5
   firebase_ui_oauth_google: ^1.2.12
+  cloud_firestore: ^4.11.0
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +60,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
